k8s/api-gateway-deplyment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: microservices
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
      - name: api-gateway
        image: gabyssr/api-gateway:latest
        ports:
        - containerPort: 5002
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-service
  namespace: microservices
spec:
  selector:
    app: api-gateway
  ports:
    - port: 80
      targetPort: 5002
