k8s/messaging-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messaging-service
  namespace: microservices
spec:
  replicas: 1
  selector:
    matchLabels:
      app: messaging-service
  template:
    metadata:
      labels:
        app: messaging-service
    spec:
      containers:
      - name: messaging-service
        image: gabyssr/messaging-service:latest
        ports:
        - containerPort: 5001
---
apiVersion: v1
kind: Service
metadata:
  name: messaging-service
  namespace: microservices
spec:
  selector:
    app: messaging-service
  ports:
  - protocol: TCP
    port: 5001
    targetPort: 5001
